Multiple layout fixes for doc section - Fix header spacing - Add favicon (Sphinx method is totally broken, hacked base.html instead) - Subnav spacing and hover state (also brute forced due to dodgy CSS work)
Fix wonky footer in Chrome

--- a/src/crate/theme/rtd/crate/static/css/main.less
+++ b/src/crate/theme/rtd/crate/static/css/main.less
@@ -32,7 +32,7 @@ body {
   top: 0;
   left: 0;
   height: 100%;
-  padding: 51px 0 0 0;
+  padding: 17px 0 0 0;
   background-color: #D4D8DB;
   transition: width 0.5s;
 }
@@ -665,6 +665,12 @@ a#crate-logo {
   color: #777777;
 }
 
+.navbar-subnav.navbar-nav > li > a:hover, .navbar-subnav.navbar-nav > li > a:focus {
+    background-color: transparent;
+    opacity: 0.5;
+    color: #000;
+}
+
 .footer .container {
   padding-top: 32px;
   border-top: 1px solid #e7e7e7;
@@ -695,7 +701,7 @@ a#crate-logo {
 }
 
 .navbar-subnav > li {
-    margin-right: 32px;
+    margin-right: 10px;
 }
 
 .navbar-nav > li > a {
@@ -723,4 +729,12 @@ a#crate-logo {
 
 .fa-github::before {
     content: "";
+}
+
+html body div#page-wrap div#navbar.navbar.navbar-inverse.navbar-default div.container nav.collapse.navbar-collapse.nav-collapse ul.nav.navbar-nav.navbar-right li {
+  padding-top: 9px;
+}
+
+.footer .table > tbody > tr > td {
+  padding: 7px;
 }
